orher image used

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <h3>What are we doing?</h3>
             <ul>
                 <li>
-                    <img src="/img/image_1.jpg" alt="PC app" width="300">
+                    <img src="/img/pic1.jpg" alt="PC app" width="300">
                 </li>
                 <li>
                     <img src="/img/image_2.jpg" alt="Mobile app" width="300">
