--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
             <h3>What are we doing?</h3>
             <ul>
                 <li>
-                    <img src="/img/image_1.jpg" alt="PC app" width="300">
+                    <img src="./img/image_1.jpg" alt="PC app" width="300">
                 </li>
                 <li>
-                    <img src="/img/image_2.jpg" alt="Mobile app" width="300">
+                    <img src="./img/image_2.jpg" alt="Mobile app" width="300">
                 </li>
                 <li>
-                    <img src="/img/image_3.jpg" alt="Crossplatform app" width="300">
+                    <img src="./img/image_3.jpg" alt="Crossplatform app" width="300">
                 </li>
             </ul>
         </section>
@@ -85,22 +85,22 @@
         <section>
             <ul>
                 <li>
-                    <img src="/img/Mark_photo.jpg" alt="Photo of Mark Guerrero" width="300">
+                    <img src="./img/Mark_photo.jpg" alt="Photo of Mark Guerrero" width="300">
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="/img/Tom_photo.jpg" alt="Photo of Tom Ford" width="300">
+                    <img src="./img/Tom_photo.jpg" alt="Photo of Tom Ford" width="300">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="/img/Camilia_photo.jpg" alt="Photo of Camila Garcia" width="300">
+                    <img src="./img/Camilia_photo.jpg" alt="Photo of Camila Garcia" width="300">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="/img/Daniel_photo.jpg" alt="Photo of Daniel Wilson" width="300">
+                    <img src="./img/Daniel_photo.jpg" alt="Photo of Daniel Wilson" width="300">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
