--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <header>
 
         <nav>
-            <a href="/"> <span>WEB</span>STUDIO</a>
+            <a href="./index.html"> <span>WEB</span>STUDIO</a>
 
             <ul>
-                <li> <a href="/">Studio</a></li>
-                <li> <a href="/">Portfolio</a> </li>
+                <li> <a href="./index.html">Studio</a></li>
+                <li> <a href="./porfolio.html">Portfolio</a> </li>
                 <li> <a href="/">Contacts</a> </li>
             </ul>
         </nav>
