--- a/porfolio.html
+++ b/porfolio.html
@@ -7,6 +7,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700;800&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
+
     <title>Портфоліо</title>
 </head>
 
@@ -15,24 +22,27 @@
 <body>
 
 
-    <header>
+    <header class="header">
 
-        <nav>
-            <a href="./index.html"> <span>WEB</span>STUDIO</a>
+        <div class="logo-link">
+            <a class="link" href="./index.html"><span class="web">WEB</span><span class="studio">STUDIO</span></a>
+        </div>
 
-            <ul>
-                <li> <a href="./index.html">Studio</a></li>
-                <li> <a href="./porfolio.html">Portfolio</a> </li>
-                <li> <a href="/">Contacts</a> </li>
+
+        <nav>          
+            <ul class="listoflinks">
+                <li> <a class="nav-link" href="./index.html">Studio</a></li>
+                <li> <a class="nav-link" href="./porfolio.html">Portfolio</a> </li>
+                <li> <a class="nav-link" href="/">Contacts</a> </li>
             </ul>
         </nav>
-        <ul>
 
+        <ul class="adress">
             <li>
-                <a href="mailto:info@devsudio.com">info@devsudio.com</a>
+                <a class="adress-link" href="mailto:info@devsudio.com">info@devsudio.com</a>
             </li>
             <li>
-                <a href="tel:+11(000)1111111">+11(000)111-11-11</a>
+                <a class="adress-link" href="tel:+11(000)1111111">+11(000)111-11-11</a>
             </li>
         </ul>
 
@@ -41,10 +51,18 @@
 
 
     <main>
+
+
+
+        <h1 class="invisible-head-one">Portfolio</h1>
+        <!--invisibility by alphachannel? -->
+
+
+
         <!--navigation-buttons-->
         <section>
             <nav>
-                <ul class="nav-button-list">
+                <ul class="listofbuttons">
                     <li>
                         <button type="button" class="nav-button-all">All</button>
                     </li>
@@ -64,97 +82,106 @@
             </nav>
         </section>
 
+
+
+        <h2 class="invisible-head-two">Our products</h2>
+
+
+
         <!--product-table(list)-->
         <section>
             <!-- row1 -->
             <div>
-                <ul>
+                <ul class="products-list">
                     <li>
-                        <a href="#">
+                        <a class="product-link" href="#">
                             <img src="./img/bankingappinterface.jpg" alt="image of different ">
-                            <h2>Banking App Interface Concept</h2>
-                            <p>App</p>
+                            <h3 class="product-name">Banking App Interface Concept</h3>
+                            <p class="product-type">App</p>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a class="product-link" href="#">
                             <img src="./img/cashlesspayment.jpg" alt="cashless payment info">
-                            <h3>Cashless payment</h3>
-                            <p>Marketing</p>
+                            <h3 class="product-name">Cashless payment</h3>
+                            <p class="product-type">Marketing</p>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a class="product-link" href="#">
                             <img src="./img/meditaionapp.jpg" alt="image of a laptop with a working app">
-                            <h2>Meditaion App</h2>
-                            <p>App</p>
+                            <h3 class="product-name">Meditaion App</h3>
+                            <p class="product-type">App</p>
                         </a>
                     </li>
                 </ul>
             </div>
             <!-- row2 -->
             <div>
-                <ul>
+                <ul class="products-list">
                     <li>
-                        <a href="#">
+                        <a class="product-link" href="#">
                             <img src="./img/taxiservice.jpg" alt="image of a driver holdin steering wheel">
-                            <h2>Taxi Service</h2>
-                            <p>Marketing</p>
+                            <h3 class="product-name">Taxi Service</h3>
+                            <p class="product-type">Marketing</p>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a class="product-link" href="#">
                             <img src="./img/screenillustrations.jpg" alt="image of a phone with different wallpapers">
-                            <h2>Screen Illustrations</h2>
-                            <p>Design</p>
+                            <h3 class="product-name">Screen Illustrations</h3>
+                            <p class="product-type">Design</p>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a class="product-link" href="#">
                             <img src="./img/onlinecourses.jpg" alt="Happy smiling girl looking on a phone screen">
-                            <h2>Online Courses</h2>
-                            <p>Marketing</p>
+                            <h3 class="product-name">Online Courses</h3>
+                            <p class="product-type">Marketing</p>
                         </a>
                     </li>
                 </ul>
             </div>
             <!-- row3 -->
             <div>
-                <ul>
+                <ul class="products-list">
                     <li>
-                        <a href="#">
+                        <a class="product-link" href="#">
                             <img src="./img/instagramstoriesconcept.jpg"
                                 alt="images of different designes of the same page/content">
-                            <h2>Instagram Stories Concept</h2>
-                            <p>Design</p>
+                            <h3 class="product-name">Instagram Stories Concept</h3>
+                            <p class="product-type">Design</p>
                         </a>
+
                     </li>
                     <li>
-                        <a href="#">
+                        <a class="product-link" href="#">
                             <img src="./img/organicfood.jpg" alt="image of woman holding vegitables in a string bag">
-                            <h2>Organic Food</h2>
-                            <p>Web Site</p>
+                            <h3 class="product-name">Organic Food</h3>
+                            <p class="product-type">Web Site</p>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a class="product-link" href="#">
                             <img src="./img/freshcoffee.jpg" alt="image of a cup of latte in a hand of barista">
-                            <h2>Fresh Coffee</h2>
-                            <p>Web Site</p>
+                            <h3 class="product-name">Fresh Coffee</h3>
+                            <p class="product-type">Web Site</p>
                         </a>
                     </li>
                 </ul>
             </div>
         </section>
-
     </main>
 
 
 
     <footer>
 
-        <a href="/"> <span>WEB</span>STUDIO</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <div class="logo-link-footer">
+            <a href="./index.html"><span class="web">WEB</span><span class="studiofooter">STUDIO</span></a>
+            <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        </div>
+        
 
     </footer>
 
