--- a/porfolio.html
+++ b/porfolio.html
@@ -95,21 +95,21 @@
                 <ul class="products-list">
                     <li>
                         <a class="product-link" href="#">
-                            <img src="./img/bankingappinterface.jpg" alt="image of different ">
+                            <img src="./img/bankingappinterface.jpg" alt="image of different " width="360">
                             <h3 class="product-name">Banking App Interface Concept</h3>
                             <p class="product-type">App</p>
                         </a>
                     </li>
                     <li>
                         <a class="product-link" href="#">
-                            <img src="./img/cashlesspayment.jpg" alt="cashless payment info">
+                            <img src="./img/cashlesspayment.jpg" alt="cashless payment info" width="360">
                             <h3 class="product-name">Cashless payment</h3>
                             <p class="product-type">Marketing</p>
                         </a>
                     </li>
                     <li>
                         <a class="product-link" href="#">
-                            <img src="./img/meditaionapp.jpg" alt="image of a laptop with a working app">
+                            <img src="./img/meditaionapp.jpg" alt="image of a laptop with a working app" width="360">
                             <h3 class="product-name">Meditaion App</h3>
                             <p class="product-type">App</p>
                         </a>
@@ -121,21 +121,21 @@
                 <ul class="products-list">
                     <li>
                         <a class="product-link" href="#">
-                            <img src="./img/taxiservice.jpg" alt="image of a driver holdin steering wheel">
+                            <img src="./img/taxiservice.jpg" alt="image of a driver holdin steering wheel" width="360">
                             <h3 class="product-name">Taxi Service</h3>
                             <p class="product-type">Marketing</p>
                         </a>
                     </li>
                     <li>
                         <a class="product-link" href="#">
-                            <img src="./img/screenillustrations.jpg" alt="image of a phone with different wallpapers">
+                            <img src="./img/screenillustrations.jpg" alt="image of a phone with different wallpapers" width="360">
                             <h3 class="product-name">Screen Illustrations</h3>
                             <p class="product-type">Design</p>
                         </a>
                     </li>
                     <li>
                         <a class="product-link" href="#">
-                            <img src="./img/onlinecourses.jpg" alt="Happy smiling girl looking on a phone screen">
+                            <img src="./img/onlinecourses.jpg" alt="Happy smiling girl looking on a phone screen" width="360">
                             <h3 class="product-name">Online Courses</h3>
                             <p class="product-type">Marketing</p>
                         </a>
@@ -148,7 +148,7 @@
                     <li>
                         <a class="product-link" href="#">
                             <img src="./img/instagramstoriesconcept.jpg"
-                                alt="images of different designes of the same page/content">
+                                alt="images of different designes of the same page/content" width="360">
                             <h3 class="product-name">Instagram Stories Concept</h3>
                             <p class="product-type">Design</p>
                         </a>
@@ -156,14 +156,14 @@
                     </li>
                     <li>
                         <a class="product-link" href="#">
-                            <img src="./img/organicfood.jpg" alt="image of woman holding vegitables in a string bag">
+                            <img src="./img/organicfood.jpg" alt="image of woman holding vegitables in a string bag" width="360">
                             <h3 class="product-name">Organic Food</h3>
                             <p class="product-type">Web Site</p>
                         </a>
                     </li>
                     <li>
                         <a class="product-link" href="#">
-                            <img src="./img/freshcoffee.jpg" alt="image of a cup of latte in a hand of barista">
+                            <img src="./img/freshcoffee.jpg" alt="image of a cup of latte in a hand of barista" width="360">
                             <h3 class="product-name">Fresh Coffee</h3>
                             <p class="product-type">Web Site</p>
                         </a>
