--- a/porfolio.html
+++ b/porfolio.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700;800&family=Roboto:wght@400;500;700;900&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 
@@ -24,16 +24,16 @@
 
     <header class="header">
 
-        <div class="logo-link">
-            <a class="link" href="./index.html"><span class="web">WEB</span><span class="studio">STUDIO</span></a>
-        </div>
+
+        <a class="link" href="./index.html"><span class="web">WEB</span><span class="studio">STUDIO</span></a>
 
 
-        <nav>          
+
+        <nav>
             <ul class="listoflinks">
                 <li> <a class="nav-link" href="./index.html">Studio</a></li>
                 <li> <a class="nav-link" href="./porfolio.html">Portfolio</a> </li>
-                <li> <a class="nav-link" href="/">Contacts</a> </li>
+                <li> <a class="nav-link" href="#">Contacts</a> </li>
             </ul>
         </nav>
 
@@ -53,68 +53,55 @@
     <main>
 
 
-
-        <h1 class="invisible-head-one">Portfolio</h1>
-        <!--invisibility by alphachannel? -->
-
-
-
-        <!--navigation-buttons-->
         <section>
-            <nav>
-                <ul class="listofbuttons">
-                    <li>
-                        <button type="button" class="nav-button-all">All</button>
-                    </li>
-                    <li>
-                        <button type="button" class="nav-button-web">Web Site</button>
-                    </li>
-                    <li>
-                        <button type="button" class="nav-button-app">App</button>
-                    </li>
-                    <li>
-                        <button type="button" class="nav-button-design">Design</button>
-                    </li>
-                    <li>
-                        <button type="button" class="nav-button-marketing">Marketing</button>
-                    </li>
-                </ul>
-            </nav>
-        </section>
+
+            <h1 class="invisible-head-one">Portfolio</h1>
+            <!--invisibility by alphachannel? -->
 
 
 
-        <h2 class="invisible-head-two">Our products</h2>
 
+            <ul class="listofbuttons">
+                <li>
+                    <button type="button" class="nav-button-all">All</button>
+                </li>
+                <li>
+                    <button type="button" class="nav-button-web">Web Site</button>
+                </li>
+                <li>
+                    <button type="button" class="nav-button-app">App</button>
+                </li>
+                <li>
+                    <button type="button" class="nav-button-design">Design</button>
+                </li>
+                <li>
+                    <button type="button" class="nav-button-marketing">Marketing</button>
+                </li>
+            </ul>
 
-
-        <!--product-table(list)-->
-        <section>
-            <!-- row1 -->
-            <div>
-                <ul class="products-list">
-                    <li>
-                        <a class="product-link" href="#">
-                            <img src="./img/bankingappinterface.jpg" alt="image of different " width="360">
-                            <h3 class="product-name">Banking App Interface Concept</h3>
-                            <p class="product-type">App</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="product-link" href="#">
-                            <img src="./img/cashlesspayment.jpg" alt="cashless payment info" width="360">
-                            <h3 class="product-name">Cashless payment</h3>
-                            <p class="product-type">Marketing</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="product-link" href="#">
-                            <img src="./img/meditaionapp.jpg" alt="image of a laptop with a working app" width="360">
-                            <h3 class="product-name">Meditaion App</h3>
-                            <p class="product-type">App</p>
-                        </a>
-                    </li>
-                </ul>
+            <ul class="products-list">
+                <li>
+                    <a class="product-link" href="#">
+                        <img src="./img/bankingappinterface.jpg" alt="image of different " width="360">
+                        <h2 class="product-name">Banking App Interface Concept</h2>
+                        <p class="product-type">App</p>
+                    </a>
+                </li>
+                <li>
+                    <a class="product-link" href="#">
+                        <img src="./img/cashlesspayment.jpg" alt="cashless payment info" width="360">
+                        <h2 class="product-name">Cashless payment</h2>
+                        <p class="product-type">Marketing</p>
+                    </a>
+                </li>
+                <li>
+                    <a class="product-link" href="#">
+                        <img src="./img/meditaionapp.jpg" alt="image of a laptop with a working app" width="360">
+                        <h2 class="product-name">Meditaion App</h2>
+                        <p class="product-type">App</p>
+                    </a>
+                </li>
+            </ul>
             </div>
             <!-- row2 -->
             <div>
@@ -122,21 +109,23 @@
                     <li>
                         <a class="product-link" href="#">
                             <img src="./img/taxiservice.jpg" alt="image of a driver holdin steering wheel" width="360">
-                            <h3 class="product-name">Taxi Service</h3>
+                            <h2 class="product-name">Taxi Service</h2>
                             <p class="product-type">Marketing</p>
                         </a>
                     </li>
                     <li>
                         <a class="product-link" href="#">
-                            <img src="./img/screenillustrations.jpg" alt="image of a phone with different wallpapers" width="360">
-                            <h3 class="product-name">Screen Illustrations</h3>
+                            <img src="./img/screenillustrations.jpg" alt="image of a phone with different wallpapers"
+                                width="360">
+                            <h2 class="product-name">Screen Illustrations</h2>
                             <p class="product-type">Design</p>
                         </a>
                     </li>
                     <li>
                         <a class="product-link" href="#">
-                            <img src="./img/onlinecourses.jpg" alt="Happy smiling girl looking on a phone screen" width="360">
-                            <h3 class="product-name">Online Courses</h3>
+                            <img src="./img/onlinecourses.jpg" alt="Happy smiling girl looking on a phone screen"
+                                width="360">
+                            <h2 class="product-name">Online Courses</h2>
                             <p class="product-type">Marketing</p>
                         </a>
                     </li>
@@ -149,39 +138,39 @@
                         <a class="product-link" href="#">
                             <img src="./img/instagramstoriesconcept.jpg"
                                 alt="images of different designes of the same page/content" width="360">
-                            <h3 class="product-name">Instagram Stories Concept</h3>
+                            <h2 class="product-name">Instagram Stories Concept</h2>
                             <p class="product-type">Design</p>
                         </a>
 
                     </li>
                     <li>
                         <a class="product-link" href="#">
-                            <img src="./img/organicfood.jpg" alt="image of woman holding vegitables in a string bag" width="360">
-                            <h3 class="product-name">Organic Food</h3>
+                            <img src="./img/organicfood.jpg" alt="image of woman holding vegitables in a string bag"
+                                width="360">
+                            <h2 class="product-name">Organic Food</h2>
                             <p class="product-type">Web Site</p>
                         </a>
                     </li>
                     <li>
                         <a class="product-link" href="#">
-                            <img src="./img/freshcoffee.jpg" alt="image of a cup of latte in a hand of barista" width="360">
-                            <h3 class="product-name">Fresh Coffee</h3>
+                            <img src="./img/freshcoffee.jpg" alt="image of a cup of latte in a hand of barista"
+                                width="360">
+                            <h2 class="product-name">Fresh Coffee</h2>
                             <p class="product-type">Web Site</p>
                         </a>
                     </li>
                 </ul>
-            </div>
+
         </section>
+
     </main>
 
 
 
-    <footer>
+    <footer class="logo-link-footer">
 
-        <div class="logo-link-footer">
-            <a href="./index.html"><span class="web">WEB</span><span class="studiofooter">STUDIO</span></a>
-            <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-        </div>
-        
+        <a class="link" href="./index.html"><span class="web">WEB</span><span class="studiofooter">STUDIO</span></a>
+        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 
     </footer>
 
