--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
         </section>
 
         <section class="section-2">
+            <h2 class="invisible-head-one" >features
+            </h2>
             <ul class="list-section">
                 <li>
                     <h3 class="list-header">Strategy</h3>
