--- a/porfolio.html
+++ b/porfolio.html
@@ -12,6 +12,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" />
     <link rel="stylesheet" href="./css/styles.css">
 
     <title>Портфоліо</title>
@@ -22,29 +24,46 @@
 <body>
 
 
-    <header class="header">
+    <header class="top-line-portfolio">
 
+        <!-- webstudio -->
+        <div class="container">
 
-        <a class="link" href="./index.html"><span class="web">WEB</span><span class="studio">STUDIO</span></a>
+            <a class="link logo" href="./index.html"><span class="web">WEB</span><span class="studio">STUDIO</span></a>
 
+            <!-- navigation -->
 
+            <nav class="navinline">
 
-        <nav>
-            <ul class="listoflinks">
-                <li> <a class="nav-link" href="./index.html">Studio</a></li>
-                <li> <a class="nav-link" href="./porfolio.html">Portfolio</a> </li>
-                <li> <a class="nav-link" href="#">Contacts</a> </li>
+                <ul class="navigation-list list">
+                    <li class="nav-list-item">
+                        <a class="link nav-link" href="./index.html"><span class="nav-item">Studio</span></a>
+                    </li>
+                    <li class="nav-list-item">
+                        <a class="link nav-link" href="./porfolio.html"><span class="nav-item">Portfolio</span></a>
+                    </li>
+                    <li class="nav-list-item">
+                        <a class="link nav-link" href="/"><span class="nav-item">Contacts</span></a>
+                    </li>
+                </ul>
+            </nav>
+
+            <!-- adress -->
+
+            <ul class="list adress-list">
+                <li class="adress-list-item">
+                    <a class="link adress-link" href="mailto:info@devstudio.com"><span
+                            class="e-mail">info@devstudio.com</span></a>
+                </li>
+                <li class="adress-list-item">
+                    <a class="link adress-link" href="tel:+11(000)1111111"><span
+                            class="tel">+11(000)111-11-11</span></a>
+                </li>
+
             </ul>
-        </nav>
 
-        <ul class="adress">
-            <li>
-                <a class="adress-link" href="mailto:info@devsudio.com">info@devsudio.com</a>
-            </li>
-            <li>
-                <a class="adress-link" href="tel:+11(000)1111111">+11(000)111-11-11</a>
-            </li>
-        </ul>
+        </div>
+
 
     </header>
 
@@ -53,110 +72,132 @@
     <main>
 
 
-        <section>
-
-            <h1 class="invisible-head-one">Portfolio</h1>
-            <!--invisibility by alphachannel? -->
+        <section class="portfolio">
 
 
 
 
-            <ul class="listofbuttons">
-                <li>
-                    <button type="button" class="nav-button-all">All</button>
-                </li>
-                <li>
-                    <button type="button" class="nav-button-web">Web Site</button>
-                </li>
-                <li>
-                    <button type="button" class="nav-button-app">App</button>
-                </li>
-                <li>
-                    <button type="button" class="nav-button-design">Design</button>
-                </li>
-                <li>
-                    <button type="button" class="nav-button-marketing">Marketing</button>
-                </li>
-            </ul>
+            <div class="container">
+                <h1 class="invisible-head-one">Portfolio</h1>
+                <!--invisibility by alphachannel? -->
 
-            <ul class="products-list">
-                <li>
-                    <a class="product-link" href="#">
-                        <img src="./img/bankingappinterface.jpg" alt="image of different " width="360">
-                        <h2 class="product-name">Banking App Interface Concept</h2>
-                        <p class="product-type">App</p>
-                    </a>
-                </li>
-                <li>
-                    <a class="product-link" href="#">
-                        <img src="./img/cashlesspayment.jpg" alt="cashless payment info" width="360">
-                        <h2 class="product-name">Cashless payment</h2>
-                        <p class="product-type">Marketing</p>
-                    </a>
-                </li>
-                <li>
-                    <a class="product-link" href="#">
-                        <img src="./img/meditaionapp.jpg" alt="image of a laptop with a working app" width="360">
-                        <h2 class="product-name">Meditaion App</h2>
-                        <p class="product-type">App</p>
-                    </a>
-                </li>
-            </ul>
+                <ul class="list button-list">
+
+                    <li class="button item">
+                        <button type="button" class="nav-button-all">All</button>
+                    </li>
+                    <li class="button item">
+                        <button type="button" class="nav-button-web">Web Site</button>
+                    </li>
+                    <li class="button item">
+                        <button type="button" class="nav-button-app">App</button>
+                    </li>
+                    <li class="button item">
+                        <button type="button" class="nav-button-design">Design</button>
+                    </li>
+                    <li class="button item">
+                        <button type="button" class="nav-button-marketing">Marketing</button>
+                    </li>
+                </ul>
+
+            </div>
+            <div class="container">
+                <ul class="list products-list">
+                    <li class="product-list-item">
+                        <a class="product-link link" href="#">
+                            <img src="./img/bankingappinterface.jpg" alt="image of different " width="360">
+                            <div class="product-content">
+                                <h2 class="product-name">Banking App Interface Concept</h2>
+                                <p class="product-type">App</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="product-list-item">
+                        <a class="product-link link" href="#">
+                            <img src="./img/cashlesspayment.jpg" alt="cashless payment info" width="360">
+                            <div class="product-content">
+                                <h2 class="product-name">Cashless payment</h2>
+                                <p class="product-type">Marketing</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="product-list-item">
+                        <a class="product-link link" href="#">
+                            <img src="./img/meditaionapp.jpg" alt="image of a laptop with a working app" width="360">
+                            <div class="product-content">
+                                <h2 class="product-name">Meditaion App</h2>
+                                <p class="product-type">App</p>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
             </div>
             <!-- row2 -->
-            <div>
-                <ul class="products-list">
-                    <li>
-                        <a class="product-link" href="#">
+            <div class="container">
+                <ul class="products-list2 list">
+                    <li class="product-list-item">
+                        <a class="product-link link" href="#">
                             <img src="./img/taxiservice.jpg" alt="image of a driver holdin steering wheel" width="360">
-                            <h2 class="product-name">Taxi Service</h2>
-                            <p class="product-type">Marketing</p>
+                            <div class="product-content">
+                                <h2 class="product-name">Taxi Service</h2>
+                                <p class="product-type">Marketing</p>
+                            </div>
                         </a>
                     </li>
-                    <li>
-                        <a class="product-link" href="#">
+                    <li class="product-list-item">
+                        <a class="product-link link" href="#">
                             <img src="./img/screenillustrations.jpg" alt="image of a phone with different wallpapers"
                                 width="360">
-                            <h2 class="product-name">Screen Illustrations</h2>
-                            <p class="product-type">Design</p>
+                            <div class="product-content">
+                                <h2 class="product-name">Screen Illustrations</h2>
+                                <p class="product-type">Design</p>
+                            </div>
                         </a>
                     </li>
-                    <li>
-                        <a class="product-link" href="#">
+                    <li class="product-list-item">
+                        <a class="product-link link" href="#">
                             <img src="./img/onlinecourses.jpg" alt="Happy smiling girl looking on a phone screen"
                                 width="360">
-                            <h2 class="product-name">Online Courses</h2>
-                            <p class="product-type">Marketing</p>
+                            <div class="product-content">
+                                <h2 class="product-name">Online Courses</h2>
+                                <p class="product-type">Marketing</p>
+                            </div>
                         </a>
                     </li>
                 </ul>
             </div>
             <!-- row3 -->
-            <div>
-                <ul class="products-list">
-                    <li>
-                        <a class="product-link" href="#">
+            <div class="container">
+                <ul class="products-list3 list">
+                    <li class="product-list-item">
+                        <a class="product-link link" href="#">
                             <img src="./img/instagramstoriesconcept.jpg"
                                 alt="images of different designes of the same page/content" width="360">
-                            <h2 class="product-name">Instagram Stories Concept</h2>
-                            <p class="product-type">Design</p>
+                            <div class="product-content">
+                                <h2 class="product-name">Instagram Stories Concept</h2>
+                                <p class="product-type">Design</p>
+                            </div>
                         </a>
 
                     </li>
-                    <li>
-                        <a class="product-link" href="#">
+                    <li class="product-list-item">
+                        <a class="product-link link" href="#">
                             <img src="./img/organicfood.jpg" alt="image of woman holding vegitables in a string bag"
                                 width="360">
-                            <h2 class="product-name">Organic Food</h2>
-                            <p class="product-type">Web Site</p>
+                            <div class="product-content">
+                                <h2 class="product-name">Organic Food</h2>
+                                <p class="product-type">Web Site</p>
+                            </div>
                         </a>
                     </li>
-                    <li>
-                        <a class="product-link" href="#">
+                    <li class="product-list-item">
+                        <a class="product-link link" href="#">
                             <img src="./img/freshcoffee.jpg" alt="image of a cup of latte in a hand of barista"
                                 width="360">
-                            <h2 class="product-name">Fresh Coffee</h2>
-                            <p class="product-type">Web Site</p>
+                            <div class="product-content">
+                                <h2 class="product-name">Fresh Coffee</h2>
+                                <p class="product-type">Web Site</p>
+                            </div>
                         </a>
                     </li>
                 </ul>
@@ -168,9 +209,15 @@
 
 
     <footer class="logo-link-footer">
+        <div class="container footer-content">
+            <a class="link logo logo-footer" href="./index.html"><span class="web">WEB</span><span
+                    class="studiofooter">STUDIO</span></a>
+            <p class="footer-paragraph">Increase the flow of customers and <br> sales for your business with digital
+                <br> marketing & growth solutions.
+            </p>
+        </div>
 
-        <a class="link" href="./index.html"><span class="web">WEB</span><span class="studiofooter">STUDIO</span></a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+
 
     </footer>
 
